--- a/小二承兑平台4/css/index.css
+++ b/小二承兑平台4/css/index.css
@@ -133,12 +133,12 @@ input, select {
     cursor: pointer;
 }
 .header .right a{
- padding: 20px 10px;
- font-weight: bold;
- cursor: pointer;
- text-decoration: none;
- color: #333;
- font-size: 14px;
+   padding: 20px 10px;
+   font-weight: bold;
+   cursor: pointer;
+   text-decoration: none;
+   color: #333;
+   font-size: 14px;
 }
 .banner{
     width: 100%;
@@ -156,8 +156,8 @@ input, select {
     margin-top: 16px;
 }
 .banner_logo{
-    width: 175px;
-    height: 25px;
+    width: 210px;
+    height: 30px;
     margin-top: 10px;
 }
 .banner_box{
@@ -177,11 +177,11 @@ input, select {
     padding:8px 20px;
 }
 .banner_line_top{
- font-size:14px;
- color: #D8EBFF;
- text-align: center;
- width: 100%;
- margin-top: -16px;
+   font-size:14px;
+   color: #D8EBFF;
+   text-align: center;
+   width: 100%;
+   margin-top: -16px;
 }
 .banner_text{
     font-size:12px;
@@ -221,7 +221,7 @@ input, select {
     text-decoration: underline;
 }
 .marquee{
-    background-color: #FECE68;
+    background-color: #FFFAE9;
     width: 100%;
 }
 .marquee p{
@@ -231,12 +231,12 @@ input, select {
     line-height: 40px;
 }
 .title1{
-   font-size:18px;
-   color: #000;
-   margin-top: 34px;
-   display: flex;
-   align-items: center;
-   justify-content: center;
+ font-size:18px;
+ color: #000;
+ margin-top: 34px;
+ display: flex;
+ align-items: center;
+ justify-content: center;
 }
 .title1 span{
     display: inline-block;
@@ -301,38 +301,48 @@ input, select {
     margin-top: 10px;
 }
 .li .shadow .button a{
-font-size: 14px;
+    font-size: 14px;
     color: #FDFDFD;
 }
 
 .li .recharge{
- font-size: 18px;
- color: #666;
- margin-top: 30px;
+   font-size: 18px;
+   color: #666;
+   margin-top: 20px;
 }
 .li .recharge span{
     font-size:20px;
     color: #E11616;
 }
+.li .number{
+   font-size: 18px;
+   color: #666;
+   margin-top: 30px;
+}
+.li .number span{
+    font-size:20px;
+    color: #000;
+}
+
 .li .name{
     font-size: 22px;
     color: #333;
-    margin-top: 44px;
+    margin-top: 30px;
 }
 .way{
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    margin-top: 44px;
+    margin-top: 22px;
 }
 .qq{
     background: #038D35;
     border-radius: 100px;
-    width: 100px;
-    height: 26px;
+    width: 140px;
+    height: 38px;
     margin: 0 10px;
-    font-size:9px;
+    font-size:16px;
     color: #fff;
     background: #033E8D;
     display: flex;
@@ -432,8 +442,8 @@ font-size: 14px;
     line-height: 1.5em;
 }
 .footer{
-    height: 90px;
-    line-height: 90px;
+    height: 50px;
+    line-height: 50px;
     background-color: #0E1946;
     font-size: 12px;
     color: #A6AABB;
