--- a/小二承兑平台4/css/index.css
+++ b/小二承兑平台4/css/index.css
@@ -133,12 +133,12 @@ input, select {
     cursor: pointer;
 }
 .header .right a{
-   padding: 20px 10px;
-   font-weight: bold;
-   cursor: pointer;
-   text-decoration: none;
-   color: #333;
-   font-size: 14px;
+ padding: 20px 10px;
+ font-weight: bold;
+ cursor: pointer;
+ text-decoration: none;
+ color: #333;
+ font-size: 14px;
 }
 .header .right a:hover{
     color: #003D8E;
@@ -154,48 +154,57 @@ input, select {
     padding: 10px 0;
 }
 .banner_title{
-    width: 189px;
-    height: 28.8px;
+    width: 227px;
+    height: 35px;
     margin-top: 16px;
 }
 .banner_logo{
     width: 315px;
     height: 45px;
-    margin-top: 10px;
-    margin-bottom: 0px;
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
 .banner_box{
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    /*margin-top: 10px;*/
 }
 .banner_box p{
     border-radius: 100px;
     background-color: #0676F3 ;
     text-align: center;
-    margin: 10px 10px;
+    margin: 14px 20px;
     color: #fff;
     font-size:10px;
     padding:8px 20px;
 }
 .banner_line_top{
-   font-size:14px;
-   color: #D8EBFF;
-   text-align: center;
-   width: 100%;
-   margin-top: -16px;
+ font-size:14px;
+ color: #D8EBFF;
+ text-align: center;
+ width: 100%;
+ margin-top: -16px;
 }
 .banner_text{
-    font-size:14px;
+    font-size:15px;
     color: #D8EBFF;
-    /*margin-top: 10px;*/
-    max-width: 1000px;
+    max-width: 760px;
     margin: 0 auto;
     padding: 0 18px;
-    line-height: 1.6em;
+    line-height: 1.5em;
     text-align: center;
+    display: flex;
+    align-items: center;
+    margin-top: 4px;
+}
+.banner_text span{
+   display: inline-block;
+   height:1px;
+   width: 20px;
+   border-top:1px solid #D8EBFF;
+   margin-left: 5px;
+   margin-right: 5px;
 }
 .banner_text2{
     font-size:18px;
@@ -240,12 +249,12 @@ input, select {
     line-height: 1.6em;
 }
 .title1{
- font-size:18px;
- color: #000;
- margin-top: 34px;
- display: flex;
- align-items: center;
- justify-content: center;
+   font-size:18px;
+   color: #000;
+   margin-top: 34px;
+   display: flex;
+   align-items: center;
+   justify-content: center;
 }
 .title1 span{
     display: inline-block;
@@ -315,10 +324,10 @@ input, select {
 }
 
 .li .recharge{
-   font-size: 18px;
-   color: #666;
-   margin-top: 30px;
-   letter-spacing: 1px;
+ font-size: 18px;
+ color: #666;
+ margin-top: 30px;
+ letter-spacing: 1px;
 }
 .li .recharge span{
     font-size:18px;
@@ -328,10 +337,10 @@ input, select {
     width: 64px;
 }
 .li .number{
-   font-size: 18px;
-   color: #666;
-   margin-top: 20px;
-   letter-spacing: 1px;
+ font-size: 18px;
+ color: #666;
+ margin-top: 20px;
+ letter-spacing: 1px;
 }
 .li .number span{
     font-size:18px;
