--- a/小二承兑平台4/css/index.css
+++ b/小二承兑平台4/css/index.css
@@ -8,7 +8,7 @@ b, i,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, figcaption, figure, 
+article, aside, canvas, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section, summary,
 time, mark, audio, video {
     margin:0;
@@ -37,7 +37,7 @@ body{
 }
 
 article,aside,canvas,details,figcaption,figure,
-footer,header,hgroup,menu,nav,section,summary { 
+footer,header,hgroup,menu,nav,section,summary {
     display:block;
 }
 
@@ -73,7 +73,7 @@ ins {
 
 mark {
     background-color:#ff9;
-    color:#000; 
+    color:#000;
     font-style:italic;
     font-weight:bold;
 }
@@ -95,7 +95,7 @@ table {
 hr {
     display:block;
     height:1px;
-    border:0;   
+    border:0;
     border-top:1px solid #cccccc;
     margin:1em 0;
     padding:0;
@@ -480,4 +480,30 @@ input, select {
     font-size: 12px;
     color: #A6AABB;
     text-align: center;
+}
+.shadow {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, .9);
+    display: flex;
+    flex-direction: column;
+    /*justify-content: center;*/
+    align-items: center;
+}
+.shadow .ico{
+width:63px;
+height: 89px;
+margin-top: 20px;
+margin-left: 260px;
+}
+.shadow p{
+    color: #fff;
+    font-size: 15px;
+    margin-top: 60px;
+    letter-spacing: 1px;
+    width: 80%;
+    line-height: 1.4em;
 }
