--- a/Candy365/css/index.css
+++ b/Candy365/css/index.css
@@ -184,6 +184,7 @@ select {
 
 
 
+
 /*index*/
 
 .container {
@@ -233,6 +234,9 @@ select {
     line-height: 30px;
     text-align: center;
     letter-spacing: 1px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .candy {
@@ -242,7 +246,6 @@ select {
 .candy-title {
     justify-content: space-between;
     height: 40px;
-    /*border: 1px solid red*/
 }
 
 .candy-title div {
@@ -250,7 +253,6 @@ select {
     height: 40px;
     line-height: 40px;
     text-align: center;
-    /*border: 1px solid red*/
 }
 
 .candy-title div span {
@@ -281,7 +283,6 @@ select {
 .list-item {
     width: 92%;
     margin: 0 auto;
-    /*border: 1px solid red;*/
     margin-top: 13px;
     background: #fff;
     border-radius: 10px;
@@ -291,7 +292,6 @@ select {
 .list-item img {
     width: 100%;
     height: 200px;
-    /*border: 1px solid blue;*/
 }
 
 .list-item p {
@@ -427,6 +427,6 @@ select {
     position: absolute;
     top: 10px;
     right: 20px;
-    width:14px;
+    width: 14px;
     height: 14px;
 }
