--- a/Candy365/css/index.css
+++ b/Candy365/css/index.css
@@ -381,22 +381,19 @@ select {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, .5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 .shadow .box {
     background: #fff;
     width: 315px;
-    /*height: 243px;*/
     border-radius: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 20px 0;
     position: relative;
-    /*justify-content: space-between;*/
+    margin: 0 auto;
+    margin-top: 200px;
 }
 
 .shadow .box h2 {
