--- a/Candy365/css/index.css
+++ b/Candy365/css/index.css
@@ -185,6 +185,7 @@ select {
 
 
 
+
 /*index*/
 
 .container {
@@ -291,7 +292,7 @@ select {
 
 .list-item img {
     width: 100%;
-    height: 200px;
+    height: auto;
 }
 
 .list-item p {
@@ -381,6 +382,7 @@ select {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, .5);
+    display: none;
 }
 
 .shadow .box {
@@ -426,4 +428,47 @@ select {
     right: 20px;
     width: 14px;
     height: 14px;
+}
+/**/
+.wxtip {
+    position: fixed;
+    text-align: center;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, .7);
+    display: none;
+}
+
+.wxtip-icon {
+    width: 58px;
+    height: 75px;
+    position: absolute;
+    right: 20px;
+    top: 20px;
+}
+
+.wxtip-txt {
+    color: #fff;
+    font-size: 16px;
+    line-height: 2;
+    margin-top: 150px;
+}
+.wx-logo{
+    width:72px;
+    height: 78px;
+    margin-top: 40px;
+}
+.wxtip h2{
+    color: #fff;
+    margin-top: 30px;
+    letter-spacing: 1px;
+    font-size: 20px;
+}
+.wxtip h3{
+    color: #fff;
+    margin-top: 30px;
+    letter-spacing: 1px;
+    font-size: 20px;
 }
