--- a/Candy365/css/index.css
+++ b/Candy365/css/index.css
@@ -238,6 +238,7 @@ select {
     display: flex;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
 }
 
 .candy {
@@ -254,6 +255,7 @@ select {
     height: 40px;
     line-height: 40px;
     text-align: center;
+    cursor: pointer;
 }
 
 .candy-title div span {
@@ -261,6 +263,7 @@ select {
     width: 60px;
     font-size: 16px;
     font-weight: bold;
+    cursor: pointer;
 }
 
 .cur {
