--- a/Eagle 2FA/css/index.css
+++ b/Eagle 2FA/css/index.css
@@ -477,3 +477,48 @@ select {
     border-top: 1px solid #F0F1F3;
     margin-bottom: 39px;
 }
+.wxtip {
+    position: fixed;
+    text-align: center;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, .7);
+    display: none;
+}
+
+.wxtip-icon {
+    width: 58px;
+    height: 75px;
+    position: absolute;
+    right: 20px;
+    top: 20px;
+}
+
+.wxtip-txt {
+    color: #fff;
+    font-size: 16px;
+    line-height: 2;
+    margin-top: 150px;
+}
+
+.wx-logo {
+    width: 72px;
+    height: 78px;
+    margin-top: 40px;
+}
+
+.wxtip h2 {
+    color: #fff;
+    margin-top: 30px;
+    letter-spacing: 1px;
+    font-size: 20px;
+}
+
+.wxtip h3 {
+    color: #fff;
+    margin-top: 30px;
+    letter-spacing: 1px;
+    font-size: 20px;
+}
