--- a/Eagle 2FA/css/index.css
+++ b/Eagle 2FA/css/index.css
@@ -194,7 +194,9 @@ select {
     overflow: hidden;
     /*border: 1px solid red;*/
 }
-
+.b1{
+    /*border: 1px solid red;*/
+}
 .flex {
     display: flex;
     -webkit-flex-direction: row;
