--- a/Eagle 2FA/css/index.css
+++ b/Eagle 2FA/css/index.css
@@ -187,7 +187,7 @@ select {
 /*index*/
 
 .container {
-    max-width: 960px;
+    max-width: 1200px;
     margin: 0 auto;
     background-color: #fff;
     min-height: 100%;
@@ -300,7 +300,7 @@ select {
 }
 
 .btn {
-    width: 157px;
+    width: 137px;
     /*width: 100%;*/
     /*max-width: 200px;*/
     height: 50px;
@@ -317,6 +317,7 @@ select {
     -ms-align-items: center;
     align-items: center;
     cursor: pointer;
+    padding: 0 10px;
 }
 
 .btn[data-type='ios'] {
@@ -336,7 +337,6 @@ select {
     -o-flex-direction: column;
     flex-direction: column;
     justify-content: space-between;
-    margin-left: 13px;
 }
 
 .btn-l p {
@@ -353,7 +353,6 @@ select {
 .btn-r {
     width: 22px;
     height: 22px;
-    margin: 5px;
 }
 
 .btn-r img {
@@ -380,7 +379,7 @@ select {
     width: 100%;
 }
 
-.con-item div p {
+.con-item p {
     font-size: 17px;
     color: #333;
     line-height: 2.2em;
@@ -465,9 +464,8 @@ select {
 }
 
 .con-item4 img {
-    width: 110px;
-    height: 110px;
-    margin-top: 45px;
+    width: 330px;
+    height: 187px;
 }
 
 .con-item4 span {
@@ -524,4 +522,18 @@ select {
     margin-top: 30px;
     letter-spacing: 1px;
     font-size: 20px;
+}
+.footer {
+    width: 100%;
+    height: 45px;
+    line-height: 45px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    -ms-align-items: center;
+    align-items: center;
+    letter-spacing: 0;
+    background-color: #1C1B21;
+    font-size: 13px;
+    color: #848589;
 }
