--- a/Eagle 2FA/css/index.css
+++ b/Eagle 2FA/css/index.css
@@ -176,6 +176,7 @@ select {
     vertical-align: middle;
 }
 
+
 /*index*/
 
 .container {
@@ -186,9 +187,11 @@ select {
     overflow: hidden;
     /*border: 1px solid red;*/
 }
-.b1{
+
+.b1 {
     /*border: 1px solid red;*/
 }
+
 .flex {
     display: flex;
     -webkit-flex-direction: row;
@@ -329,6 +332,7 @@ select {
     -o-flex-direction: column;
     flex-direction: column;
     justify-content: space-between;
+    width: 100px;
 }
 
 .btn-l p {
@@ -351,13 +355,15 @@ select {
     width: 22px;
     height: 22px;
 }
-.con-list{
+
+.con-list {
     /*border: 1px solid red;*/
     background-image: url('../imgs/bg.png');
     background-repeat: no-repeat;
     background-size: 200% 90%;
-    background-position:50% 50%;
+    background-position: 50% 50%;
 }
+
 .con-item {
     /*border: 1px solid #000;*/
     width: 100%;
@@ -465,11 +471,13 @@ select {
     color: #333;
     margin-top: 11px;
 }
-.line{
+
+.line {
     margin: 0 20px;
     border-top: 1px solid #F0F1F3;
     margin-bottom: 39px;
 }
+
 .wxtip {
     position: fixed;
     text-align: center;
@@ -515,6 +523,7 @@ select {
     letter-spacing: 1px;
     font-size: 20px;
 }
+
 .footer {
     width: 100%;
     height: 45px;
@@ -528,4 +537,19 @@ select {
     background-color: #1C1B21;
     font-size: 13px;
     color: #848589;
+}
+
+.alert {
+    position: absolute;
+    left: 0;
+    top: -104px;
+    width: 154px;
+    height: 101px;
+    border-radius: 5px;
+    overflow: hidden;
+    display: none;
+}
+
+.btn2 {
+    border-radius: 0px;
 }
