--- a/Candy365/css/index.css
+++ b/Candy365/css/index.css
@@ -763,10 +763,11 @@ select {
 }
 .advert .advert-download{
     position: absolute;
-    top: 25%;
-    right: 10%;
-    width:84px;
-    height: 34px;
+    top: 0;
+    right: 0;
+    width:100%;
+    height: 60px;
+    z-index: 99;
 }
 .advert .advert-close{
     position: absolute;
@@ -774,4 +775,5 @@ select {
     right: 0;
     width:20px;
     height: 20px;
+    z-index: 999;
 }
