--- a/Candy365/css/index.css
+++ b/Candy365/css/index.css
@@ -363,12 +363,14 @@ select {
 
 .list-item-more .div {
     height: 73px;
-    width: 100%;
+    width: 90%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: space-between;
     padding-left: 14px;
+    /*border: 1px solid red;*/
+    margin-left: 10px;
 }
 
 .list-item-more p {
