--- a/Eagle 2FA/css/index.css
+++ b/Eagle 2FA/css/index.css
@@ -412,7 +412,8 @@ select {
 }
 
 .con-item3 div p {
-    /*width: 100%;*/
+    width: 90%;
+    line-height: 1.6em;
     text-align: left;
     padding-left: 20px;
     /*border: 1px solid red;*/
