--- a/Eagle 2FA/css/index.css
+++ b/Eagle 2FA/css/index.css
@@ -357,9 +357,9 @@ select {
 }
 
 .con-list {
-    background-image: url('../imgs/bg2.png');
+   /* background-image: url('../imgs/bg2.png');
     background-repeat: no-repeat;
-    background-size: 100% 100%;
+    background-size: 100% 100%;*/
    /* background-position: 50% 50%;*/
 }
 
